--- a/src/TFG.RulesPenaltiesF1.Web/TFG.RulesPenaltiesF1.Web.csproj
+++ b/src/TFG.RulesPenaltiesF1.Web/TFG.RulesPenaltiesF1.Web.csproj
@@ -30,5 +30,9 @@
   <ItemGroup>
     <ProjectReference Include="..\TFG.RulesPenaltiesF1.Infrastructure\TFG.RulesPenaltiesF1.Infrastructure.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="AcceptanceTests" />
+  </ItemGroup>
   
 </Project>
