--- a/src/TFG.RulesPenaltiesF1.Web/Properties/launchSettings.json
+++ b/src/TFG.RulesPenaltiesF1.Web/Properties/launchSettings.json
@@ -26,7 +26,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Testing",
+        "ASPNETCORE_ENVIRONMENT": "Development",
         "VaultUri": "https://rulespenaltiesf1keyvault.vault.azure.net/",
         "AZURE_USERNAME": "jorge.rebe@estudiantes.uva.es"
       }
