--- a/src/TFG.RulesPenaltiesF1.Infrastructure/TFG.RulesPenaltiesF1.Infrastructure.csproj
+++ b/src/TFG.RulesPenaltiesF1.Infrastructure/TFG.RulesPenaltiesF1.Infrastructure.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Autofac" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" />
     <PackageReference Include="MediatR" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" PrivateAssets="all" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
