cambios en los tests aceptación

--- a/src/TFG.RulesPenaltiesF1.Web/Dockerfile
+++ b/src/TFG.RulesPenaltiesF1.Web/Dockerfile
@@ -5,6 +5,9 @@ WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
+ENV VaultUri="https://rulespenaltiesf1keyvault.vault.azure.net/"
+ENV ASPNETCORE_ENVIRONMENT="Production"
+
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
 COPY ["nuget.config", "."]
