--- a/src/TFG.RulesPenaltiesF1.Infrastructure/TFG.RulesPenaltiesF1.Infrastructure.csproj
+++ b/src/TFG.RulesPenaltiesF1.Infrastructure/TFG.RulesPenaltiesF1.Infrastructure.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Autofac" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" />
     <PackageReference Include="MediatR" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" PrivateAssets="all" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" />
