--- a/src/TFG.RulesPenaltiesF1.Web/appsettings.json
+++ b/src/TFG.RulesPenaltiesF1.Web/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -22,5 +22,8 @@
         }
       }
     ]
+  },
+  "ConnectionStrings": {
+    "RulesPenaltiesF1DbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TFG.RulesPenaltiesF1.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
