--- a/src/TFG.RulesPenaltiesF1.Core/TFG.RulesPenaltiesF1.Core.csproj
+++ b/src/TFG.RulesPenaltiesF1.Core/TFG.RulesPenaltiesF1.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Ardalis.SmartEnum" />
     <PackageReference Include="Autofac" />
     <PackageReference Include="MediatR" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
   </ItemGroup>
 
 </Project>
