--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@
 root = true
 # All files
 [*]
-indent_style = space
+indent_style = tab
 
 # XML project files
 [*.{csproj,vbproj,vcxproj,vcxproj.filters,proj,projitems,shproj}]
@@ -143,6 +143,7 @@ csharp_style_prefer_method_group_conversion = true:silent
 csharp_style_prefer_top_level_statements = true:silent
 csharp_style_expression_bodied_lambdas = true:silent
 csharp_style_prefer_null_check_over_type_check = true:suggestion
+csharp_indent_braces = true
 ###############################
 # VB Coding Conventions       #
 ###############################
