añadidos estados para competiciones y vistas detalle temporada actualizadas

--- a/src/TFG.RulesPenaltiesF1.Infrastructure/TFG.RulesPenaltiesF1.Infrastructure.csproj
+++ b/src/TFG.RulesPenaltiesF1.Infrastructure/TFG.RulesPenaltiesF1.Infrastructure.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.SmartEnum.EFCore" />
     <PackageReference Include="Autofac" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" />
     <PackageReference Include="MediatR" />
