--- a/.editorconfig
+++ b/.editorconfig
@@ -143,7 +143,8 @@ csharp_style_prefer_method_group_conversion = true:silent
 csharp_style_prefer_top_level_statements = true:silent
 csharp_style_expression_bodied_lambdas = true:silent
 csharp_style_prefer_null_check_over_type_check = true:suggestion
-csharp_indent_braces = true
+csharp_indent_braces = false
+csharp_style_expression_bodied_local_functions = false:silent
 ###############################
 # VB Coding Conventions       #
 ###############################
