--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,9 @@ Generated\ Files/
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
 
+# CoverageReport
+coveragereport/
+
 # NUnit
 *.VisualState.xml
 TestResult.xml
